--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xiaohui/helpers",
+    "name": "xiaohui/helper-tools",
     "description": "php帮助工具包",
     "version": "1.0.0",
     "type": "library",
